<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:id="@+id/profileImageAlert"
            android:src="@drawable/profile_alert"
            android:contentDescription="@string/accessibility_profile_management" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_alert"
            android:id="@+id/profileAlert"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/profile_actual_alert"
            android:id="@+id/actualUsernameAlert"
            android:textSize="22sp"
            android:gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_actual_default"
            android:id="@+id/actualUsername"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/profile_change_alert"
        android:id="@+id/editUsernameAlert"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="20sp"
        android:id="@+id/newUsernameText"
        android:layout_gravity="center_horizontal"
        android:editable="true"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/profile_edit_text"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_button"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:focusable="true"
        android:height="80dp"
        android:textSize="16sp"
        android:width="150dp"
        android:layout_gravity="center_horizontal"
        android:onClick="changeUsername"
        android:background="@drawable/custom_button"
        android:textColor="@color/white" />
</LinearLayout>
