<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/main_battleship_alert"
        android:id="@+id/mainBattleShipAlert"
        android:textAlignment="center"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/main_battleship_subtitle"
        android:id="@+id/mainBattleshipSubtitle"
        android:gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/startButton"
            android:layout_margin="10dp"
            android:layout_marginRight="0dp"
            android:src="@drawable/start_battle"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/accessibility_start_button"
            android:layout_marginLeft="30dp"
            android:onClick="startGame" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/leaderBoardButton"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/leaderboard"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/accessibility_leaderboard_button"
            android:onClick="showLeaderboard" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/start_battleship_button"
            android:id="@+id/startText"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/view_leaderboard_button"
            android:id="@+id/leaderBoardText"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>