<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack_phase_alert"
        android:id="@+id/attackPhaseAlert"
        android:textSize="24sp"
        android:textStyle="bold" />

    <include
        layout="@layout/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack_alert"
        android:id="@+id/attackAlert"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textSize="16sp"
        android:padding="10dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_shoot_alert"
            android:id="@+id/shootMemberAlert"
            android:textSize="20sp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:id="@+id/shootLeft"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp" />
    </LinearLayout>
</LinearLayout>